<resources>
    <string name="app_name">TensorKinopoisk</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="films">Фильмы</string>
    <string name="series">Сериалы</string>
    <string name="favorite">Избранное</string>
    <string name="film_name">Название фильма</string>
    <string name="serial_name">Название сериала</string>
    <string name="description_only">Описание</string>
    <string name="description">Описание:</string>
    <string name="year_released">Год выхода:</string>
    <string name="_8_8">8.8</string>
    <string name="actors">Актёры</string>
    <string name="text_frag_favorite">Избранные фильмы и сериалы:</string>
</resources>