<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_films">

    <fragment
        android:id="@+id/navigation_films"
        android:name="studio.stilip.tensorkinopoisk.ui.films.FilmsFragment"
        android:label="@string/films"
        tools:layout="@layout/fragment_films" />

    <fragment
        android:id="@+id/navigation_series"
        android:name="studio.stilip.tensorkinopoisk.ui.series.SeriesFragment"
        android:label="@string/series"
        tools:layout="@layout/fragment_series" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="studio.stilip.tensorkinopoisk.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>